hphp/hack/test/typecheck/strict_switch/just_int.php.exp
File "just_int.php", line 24, characters 11-12:
`switch` statement nonexhaustive; at least the following cases are missing: `default` (Typing[4019])
  File "just_int.php", line 24, characters 11-12:
  only unions and intersections of bool, null and enums can be switched on without a default
File "just_int.php", line 16, characters 10-11:
Case in `switch` must be either an enum constant or a literal expression. (Typing[4020])
File "just_int.php", line 36, characters 10-10:
Redundant `case` statement (Typing[4021])
  File "just_int.php", line 32, characters 10-10:
  `0` already handled here
File "just_int.php", line 38, characters 10-10:
Redundant `case` statement (Typing[4021])
  File "just_int.php", line 34, characters 10-10:
  `1` already handled here
